--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "export": "next export"
   },
   "dependencies": {
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "next": "^12.0.7",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sass": "^1.49.9"
   },
   "devDependencies": {
-    "@netlify/plugin-nextjs": "^4.2.5"
+    "@netlify/plugin-nextjs": "^4.2.5",
+    "@types/react": "^17.0.39",
+    "typescript": "^4.6.2"
   }
 }
